// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitButton should render when closed 1`] = `
<SplitButton__FlexContainer>
  <PrimaryButton
    data-test="splitbutton"
    onClick={[MockFunction]}
  >
    Add checkbox
  </PrimaryButton>
  <Popout
    container={[Function]}
    horizontalAlignment="right"
    layer={[Function]}
    offsetY="100%"
    onToggleOpen={[Function]}
    open={false}
    transition={[Function]}
    trigger={
      <MenuButton
        data-test="splitbutton-menu"
      />
    }
    verticalAlignment="top"
  >
    <ButtonGroup>
      <Button
        onClick={[MockFunction]}
        secondary={true}
        type="button"
        variant="primary"
      >
        Add other answer
      </Button>
    </ButtonGroup>
  </Popout>
</SplitButton__FlexContainer>
`;

exports[`SplitButton should render when open 1`] = `
<SplitButton__FlexContainer>
  <PrimaryButton
    data-test="splitbutton"
    onClick={[MockFunction]}
  >
    Add checkbox
  </PrimaryButton>
  <Popout
    container={[Function]}
    horizontalAlignment="right"
    layer={[Function]}
    offsetY="100%"
    onToggleOpen={[Function]}
    open={true}
    transition={[Function]}
    trigger={
      <MenuButton
        data-test="splitbutton-menu"
      />
    }
    verticalAlignment="top"
  >
    <ButtonGroup>
      <Button
        onClick={[MockFunction]}
        secondary={true}
        type="button"
        variant="primary"
      >
        Add other answer
      </Button>
    </ButtonGroup>
  </Popout>
</SplitButton__FlexContainer>
`;
